crates/lexeme/tests/ui/struct.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
pub struct Token;

fn main() {}
